[package]
name = "hill_vacuum"
version = "0.3.3"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A bevy-based 2D map editor"
homepage = "https://github.com/IvoryDuke/HillVacuum"
repository = "https://github.com/IvoryDuke/HillVacuum"
readme = "README.md"
keywords = ["gamedev", "mapeditor", "bevy"]

[features]
arena_alloc = [
    "dep:blink-alloc",
    "hashbrown/nightly"
]

[dependencies.hill_vacuum_shared]
version = "0.3.3"

[build-dependencies.hill_vacuum_shared]
version = "0.3.3"

[dependencies.hill_vacuum_proc_macros]
version = "0.3.3"

[dependencies.bevy]
version = "0.14"
default-features = false
features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",
    "bevy_state",
    "bevy_winit",
    "png",
    "x11",
    "wayland"
]

[dependencies.bevy_egui]
version = "0.28"
default-features = false
features = ["default_fonts", "render"]

[dependencies.arrayvec]
version = "0.7"

[dependencies.ciborium]
version = "0.2"

[dependencies.egui_extras]
version = "0.28"

[dependencies.blink-alloc]
version = "0.3"
features = ["nightly"]
optional = true

[dependencies.configparser]
version = "3.*"
features = ["indexmap"]

[dependencies.is_executable]
version = "1.*"

[dependencies.hashbrown]
version = "0.14"
features = ["inline-more"]

[dependencies.paste]
version = "1.*"

[dependencies.rfd]
version = "0.14"

[dependencies.serde]
version = "1.*"

[dependencies.smallvec]
version = "1.*"
features = ["union"]

[dependencies.threadpool]
version = "1.*"
