[package]
name = "hill_vacuum"
version = "0.6.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A bevy-based 2D map editor"
homepage = "https://github.com/IvoryDuke/HillVacuum"
repository = "https://github.com/IvoryDuke/HillVacuum"
readme = "README.md"
keywords = ["gamedev", "mapeditor", "bevy"]

[features]
arena_alloc = [
    "dep:blink-alloc",
    "hashbrown/nightly"
]
dynamic_linking = ["bevy/dynamic_linking"]
ui = [
    "dep:bevy",
    "dep:bevy_egui",
    "dep:configparser",
    "dep:egui_extras",
    "dep:is_executable",
    "dep:paste",
    "dep:rfd",
    "dep:threadpool"
]
default = ["ui"]

[dependencies.hill_vacuum_shared]
version = "0.6.1"

[build-dependencies.hill_vacuum_shared]
version = "0.6.1"

[dependencies.hill_vacuum_proc_macros]
path = "../hill_vacuum_proc_macros"

[dependencies.bevy]
version = "0.14"
default-features = false
features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",
    "bevy_state",
    "bevy_winit",
    "png",
    "x11",
    "wayland"
]
optional = true

[dependencies.bevy_egui]
version = "0.28"
default-features = false
features = ["default_fonts", "render"]
optional = true

[dependencies.arrayvec]
version = "0.7"

[dependencies.blink-alloc]
version = "0.3"
features = ["nightly"]
optional = true

[dependencies.ciborium]
version = "0.2"

[dependencies.configparser]
version = "3.*"
features = ["indexmap"]
optional = true

[dependencies.egui_extras]
version = "0.28"
optional = true

[dependencies.glam]
version = "0.27"
features = ["serde"]

[dependencies.hashbrown]
version = "0.14"
features = ["inline-more"]

[dependencies.is_executable]
version = "1.*"
optional = true

[dependencies.paste]
version = "1.*"
optional = true

[dependencies.rfd]
version = "0.14"
optional = true

[dependencies.serde]
version = "1.*"

[dependencies.smallvec]
version = "1.*"
features = ["union"]

[dependencies.threadpool]
version = "1.*"
optional = true
