[package]
name = "hill_vacuum"
version = "0.11.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A bevy-based 2D map editor"
homepage = "https://github.com/IvoryDuke/HillVacuum"
repository = "https://github.com/IvoryDuke/HillVacuum"
readme = "README.md"
keywords = ["gamedev", "mapeditor", "bevy"]

[features]
dynamic_linking = ["bevy/dynamic_linking"]
ui = [
    "dep:bevy",
    "dep:bevy_egui",
    "dep:configparser",
    "dep:egui_extras",
    "dep:indexmap",
    "dep:is_executable",
    "dep:paste",
    "dep:rfd",
    "dep:smallvec",
    "dep:threadpool"
]
default = ["ui"]

[dependencies.hill_vacuum_shared]
version = "0.11.2"

[dependencies.hill_vacuum_proc_macros]
version = "0.11.2"

[dependencies.bevy]
version = "0.16"
default-features = false
features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",
    "bevy_state",
    "bevy_window",
    "bevy_winit",
    "multi_threaded",
    "png",
    "x11",
    "wayland"
]
optional = true

[dependencies.bevy_egui]
version = "0.34"
default-features = false
features = ["default_fonts", "render"]
optional = true

[dependencies.arrayvec]
version = "0.7"

[dependencies.ahash]
version = "0.8"
features = ["serde"]

[dependencies.ciborium]
version = "0.2"

[dependencies.configparser]
version = "3.*"
features = ["indexmap"]
optional = true

[dependencies.egui_extras]
version = "0.31"
optional = true

[dependencies.glam]
version = "0.29"
features = ["serde"]

[dependencies.hashbrown]
version = "0.15"
features = ["serde"]

[dependencies.indexmap]
version = "2"
optional = true

[dependencies.is_executable]
version = "1"
optional = true

[dependencies.paste]
version = "1"
optional = true

[dependencies.rfd]
version = "0.15"
default-features = false
features = ["gtk3"]
optional = true

[dependencies.serde]
version = "1"

[dependencies.smallvec]
version = "1"
features = ["union", "serde"]
optional = true

[dependencies.threadpool]
version = "1.*"
optional = true
