[package]
name = "hill_vacuum_lib"
version = "0.2.0"
edition = "2021"

[features]
debug = [
    "bevy/bevy_gizmos",
    "bevy/dynamic_linking"
]
arena_alloc = [
    "dep:blink-alloc",
    "hashbrown/nightly"
]

[dependencies.bevy]
version = "0.13"
default-features = false
features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",
    "bevy_winit",
    "multi-threaded",
    "png",
    "x11",
    "wayland"
]

[dependencies.bevy_egui]
version = "0.27"
default-features = false
features = ["default_fonts", "render"]

[dependencies.arrayvec]
version = "0.7"

[dependencies.ciborium]
version = "0.2"

[dependencies.egui_extras]
version = "0.27"

[dependencies.blink-alloc]
version = "0.3"
features = ["nightly"]
optional = true

[dependencies.configparser]
version = "3.*"
features = ["indexmap"]

[dependencies.is_executable]
version = "1.*"

[dependencies.hashbrown]
version = "0.14"
features = ["inline-more"]

[dependencies.paste]
version = "1.*"

[dependencies.rfd]
version = "0.14"

[dependencies.serde]
version = "1.*"

[dependencies.smallvec]
version = "1.*"
features = ["union"]

[dependencies.threadpool]
version = "1.*"

[dependencies.proc_macros]
path = "proc_macros"

[dependencies.shared]
path = "shared"
